fixed image width on mobile

--- a/public_html/style.css
+++ b/public_html/style.css
@@ -257,6 +257,7 @@ textarea {
   display: block;
   margin: auto;
   margin-top: 15px;
+  max-width: 100%;
 }
 
 #chat-output {
